<resources>
    <!-- General -->
    <string name="app_name">Stay Fit</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_activity">Activity</string>
    <string name="title_myroutines">MyRoutines</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_profile">Profile</string>

    <!-- ====================================================================== -->
    <!-- On-boarding(walk through) screens                                      -->
    <!-- ====================================================================== -->
    <!-- On-boarding screen 1 -->
    <string name="onboarding_slide1_title">Welcome to StayFit</string>
    <string name="onboarding_slide1_desc">StayFit is an effortless way to track all your physical activities including sleep, heart rate and calories burned.</string>

    <!-- On-boarding screen 2 -->
    <string name="onboarding_slide2_title">Personalized</string>
    <string name="onboarding_slide2_desc">StayFit creates personalized routines based on your data to help you get in shape and improve your health</string>

    <!-- On-boarding screen 3 -->
    <string name="onboarding_slide3_title">Scheduled</string>
    <string name="onboarding_slide3_desc">Add training routines to your personalized calendar</string>

    <!-- ====================================================================== -->
    <!-- Sign in activity                                                       -->
    <!-- ====================================================================== -->
    <string name="title_activity_sign_in">Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>

    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="text_signin_social_media">Or Sign In using social media</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>

    <!-- ====================================================================== -->
    <!-- Signup activity                                                        -->
    <!-- ====================================================================== -->
    <string name="sign_up">Sign up</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="age">Your age</string>
    <string name="height">Your height</string>
    <string name="weight">Your weight</string>
    <string-array name="gender_array">
        <item>Man</item>
        <item>Women</item>
    </string-array>

    <!-- ====================================================================== -->
    <!-- Home activity                                                          -->
    <!-- ====================================================================== -->
    <string name="home_subtitle">Be healthier everyday</string>
    <string name="home_exercises_title">Daily workout</string>
    <string name="home_exercises_subtitle">Start your daily exercises workout</string>
    <string name="start">Start</string>
    <string name="blogs">Blogs</string>
    <string name="analytics">Analytics</string>

    <!-- ====================================================================== -->
    <!-- Daily exercise activity                                                -->
    <!-- ====================================================================== -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="take_rest">Take rest</string>
    <string name="get_started">Get started</string>
    <string name="Start">Start</string>
    <string name="wellDone">Well Done!</string>
    <string name="congratulations">Congratulation you are done with your workout session!</string>

    <!-- ====================================================================== -->
    <!-- Analytics activity bottom sheets                                       -->
    <!-- ====================================================================== -->
    <string name="titleWalkWidget">Walk</string>
    <string name="titleGymWidget">Walk</string>
    <string name="titleBodyMass">BMI</string>
    <string name="titleWaterWidget">Water</string>
    <string name="titleHeartWidget">Heart</string>
    <string name="titleCaloriesWidget">Calories</string>

    <string name="subTitleBottomSheetSleep">Your BMI:</string>
    <string name="subTitleBottomSheetHeart">Heart BPM rate</string>


    <string name="arm">arm</string>
    <string name="leg">leg</string>
    <string name="abs">abs</string>
    <string name="chest">chest</string>
    <string name="back">back</string>
    <string name="extra">extra</string>
    <string name="cardio">cardio</string>
    <string name="stretches">stretches</string>
    <string name="yoga">yoga</string>
    <string name="meditation">meditation</string>
    <string name="biceps">biceps</string>
    <string name="triceps">triceps</string>
    <string name="shoulder">shoulder</string>
    <string name="myroutines">MyRoutines</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Reset password view -->
    <string name="reset_password">Reset password</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="invalid_name">You have forgotten to put a name.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
</resources>
