<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_activity"
        android:title="@string/title_activity" />
    <item
        android:id="@+id/navigation_myroutines"
        android:icon="@drawable/ic_assignment"
        android:title="@string/title_myroutines" />
    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/ic_timer"
        android:title="@string/title_workouts" />
    
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />
</menu>
