<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
           android:id="@+id/navigation_home"
           android:name="com.stayfit.ui.home.HomeFragment"
           android:label="Feed"
           tools:layout="@layout/home_fragment" />

    <!--<fragment
        android:id="@+id/navigation_feed"
        android:name="com.stayfit.ui.home.feed.FeedFragment"
        android:label="Feed"
        tools:layout="@layout/feed_fragment" />-->

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.stayfit.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/activity_fragment" />

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.stayfit.ui.workouts.menu.WorkoutsFragment"
        android:label="@string/title_workouts"
        tools:layout="@layout/workouts_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.stayfit.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/navigation_myroutines"
        android:name="com.stayfit.ui.myroutines.MyRoutinesFragment"
        android:label="@string/title_myroutines"
        tools:layout="@layout/fragment_my_routines" />

</navigation>
