<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workouts.menu.ExtraMenu"
    android:orientation="vertical">
    <ImageButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btn_cardio"
        android:src="@drawable/cardio"
        android:scaleType="fitXY"
        android:background="#00FFFFFF"
        android:contentDescription="@string/cardio"
        android:onClick="startCardioExercises"/>
    <ImageButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btn_stretches"
        android:src="@drawable/stretches"
        android:scaleType="fitXY"
        android:background="#00FFFFFF"
        android:contentDescription="@string/stretches"
        android:onClick="startStretchesExercises"/>
    <ImageButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btn_yoga"
        android:src="@drawable/yoga"
        android:scaleType="fitXY"
        android:background="#00FFFFFF"
        android:contentDescription="@string/yoga"
        android:onClick="startYogaExercises"/>
    <ImageButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btn_meditation"
        android:src="@drawable/meditation"
        android:scaleType="fitXY"
        android:background="#00FFFFFF"
        android:contentDescription="@string/meditation"
        android:onClick="startMeditationExercises"/>


</LinearLayout>