<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workouts.menu.ArmMenu"
    android:orientation="vertical">
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/biceps"
        android:scaleType="fitXY"
        android:src="@drawable/biceps"
        android:id="@+id/btn_biceps"
        android:onClick="startBicepsExercises"/>
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/triceps"
        android:scaleType="fitXY"
        android:src="@drawable/triceps"
        android:id="@+id/btn_triceps"/>
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/shoulder"
        android:scaleType="fitXY"
        android:src="@drawable/shoulder"
        android:id="@+id/btn_shoulder"/>

</LinearLayout>