<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stayfit.ui.login.LoginActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/container_layout_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_onboarding3" />

        <TextView
            android:id="@+id/login_welcome_msg"
            style="@style/LabelStyle"
            android:layout_marginTop="14dp"
            android:text="@string/login" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="12dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgotPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPurple"
            app:layout_constraintBaseline_toBaselineOf="@+id/rememberMeBtn"
            app:layout_constraintEnd_toEndOf="@+id/tv_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rememberMeBtn" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/SolidButtonStyle"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in" />

        <LinearLayout
            android:id="@+id/social_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_signin_social_media"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/sign_up_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/no_account"
                style="@style/LabelStyle"
                android:text="@string/no_account"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signUpTv"
                style="@style/LabelStyle"
                android:layout_toEndOf="@id/no_account"
                android:paddingLeft="10dp"
                android:text="@string/sign_up"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>